2016-09-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_std.m: Revision of fmode 1. Small changes for species
	retrieval settings.

	* Settings/q_std.m:
	* Settings/q_meso.m: General changes are Q.TB_CONTRAST_FAC = [];,
	Q.STOP_DX = 0.5 and Q.NOISE_CORRMODEL = 'expo';

	* Mscripts_atmlab/isboolean.m:
	* Mscripts_atmlab/rqre_datatype.m: Copied from Atmlab.

2016-09-15  Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Close all files before exit.
	* runscript.m: Add support for no target credentials.

2016-09-09  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4l2): Removed scaling to vmr/vmr
	of species AVKs. That is, these AVK are now of %/% type.

2016-09-09  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_fields.rst: Revised and updated.

	* Mscripts_atmlab/time/: All files recopied from Atmlab. Many of
	these functions used nargchk and Matlab 2016a gives a warning
	about this function, that it will be removed. For this reason,
	the checks inside these functions have been commented out in
	Atmlab and copied to move these changes Qsmr. 

2016-09-06  Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Call exit when runscript is done.

2016-09-05  Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Get FreqMode from log data instead of from api url.

2016-08-29  Jimmy Petersson  <jimmy@molflow.com>

	* Settings/q_docker.m: Reset LD_LIBRARY_PATH when calling arts.
	* runscript.m: Add support for data delivery to odin api.

2016-08-22  Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Let runscript take the odin api url as an argument.
	* Settings/q_docker.m: Modify the standard settings so that all
	data can be found in the docker container.

2016-07-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* notes.txt: Extended with a description on how to generate lookup
	tables.

2016-06-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>
